--- a/index.html
+++ b/index.html
@@ -372,10 +372,10 @@ footer h1 {
             </div>
             <div class="two">
                 <ul>
-                    <li><a href="https://freemane666.github.io/amon_reo_fashion/">ジャケット</a></li>
-                    <li><a href="https://freemane666.github.io/amon_reo_fashion/">Tシャツ</a></li>
-                    <li><a href="https://freemane666.github.io/amon_reo_fashion/">パーカー</a></li>
-                    <li><a href="https://freemane666.github.io/amon_reo_fashion/">デニム</a></li>
+                     <li><a href="https://freemane666.github.io/jacket/">ジャケット</a></li>
+                    <li><a href="https://freemane666.github.io/t-shirt/">Tシャツ</a></li>
+                    <li><a href="https://freemane666.github.io/hoodie/">パーカー</a></li>
+                    <li><a href="https://freemane666.github.io/denim/">デニム</a></li>
                 </ul>
             </div>
         </div>
