--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ footer h1 {
             </div>
             <div class="two">
                 <ul>
-                    <li><a href="https://freemane666.github.io/denim/">ホーム</a></li>
+                    <li><a href="https://freemane666.github.io/amon_reo_fashion/">ホーム</a></li>
                      <li><a href="https://freemane666.github.io/jacket/">ジャケット</a></li>
                     <li><a href="https://freemane666.github.io/t-shirt/">Tシャツ</a></li>
                     <li><a href="https://freemane666.github.io/hoodie/">パーカー</a></li>
